--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react-router-dom": "^6.4.4",
     "redux-toolkit": "^1.1.2",
     "saas": "^1.0.0",
-    "sass": "^1.56.1",
-    "vite-plugin-pwa": "^0.13.3"
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-pwa": "^0.13.3"
   }
 }
